--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Narrow Jumbotron Template for Bootstrap</title>
+    <title>Sensi - Sensitivity Analysis Framework</title>
 
     <!-- Bootstrap core CSS -->
     <!-- Latest compiled and minified CSS -->
@@ -131,7 +131,7 @@
       </div>
       {% block main %}{% endblock %}
       <footer class="footer">
-        <p>&copy; VPH-Share 2015 - Made with love by Jeroen Feher &amp; Susheel Varma</p>
+        <p>&copy; VPH-Share 2015 - Made with love by Wouter Huberts, Wouter Donders, Ellen Nijessen, Jeroen Feher &amp; Susheel Varma</p>
       </footer>
 
     </div> <!-- /container -->
