--- a/templates/oneVFFR.html
+++ b/templates/oneVFFR.html
@@ -12,7 +12,7 @@
 <div class="control-group">
   <label class="control-label" for="samples">Number of Samples</label>
   <div class="controls">
-    <input id="samples" name="samples" type="text" placeholder="number of samples" class="input-xlarge">
+    <input id="samples" name="samples" type="text" placeholder="number of samples" class="input-xlarge required">
 
   </div>
 </div>
@@ -39,7 +39,7 @@ higherPressue 0 0 1 0</textarea>
 <div class="control-group">
   <label class="control-label" for="outputs">Number of outputs</label>
   <div class="controls">
-    <input id="outputs" name="outputs" type="text" placeholder="outputs" class="input-xlarge">
+    <input id="outputs" name="outputs" type="text" placeholder="outputs" class="input-xlarge required">
 
   </div>
 </div>
@@ -60,7 +60,7 @@ higherPressue 0 0 1 0</textarea>
 <div class="control-group">
   <label class="control-label" for="script">Startup Script</label>
   <div class="controls">
-    <input id="script" name="script" type="text" placeholder="SATask.sh" class="input-xlarge">
+    <input id="script" name="script" type="text" placeholder="SATask.sh" class="input-xlarge required">
 
   </div>
 </div>
