Updated index.html with basic info on eah model

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,16 +8,16 @@
 <div class="row marketing">
   <div class="col-lg-6">
     <h4><a href="/ishigami">Ishigami Model</a></h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+    <p>The Ishigami function of Ishigami &amp; Homma (1990) is used as an example for uncertainty and sensitivity analysis methods, because it exhibits strong nonlinearity and nonmonotonicity. It also has a peculiar dependence on x3, as described by Sobol' &amp; Levitan (1999).</p>
 
     <h4><a href="/zeroVFFR">0D vFFR Model</a></h4>
-    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+    <p>The OD-vFFR model is an electrical analogue model describing the circulation in the human body.</p>
 
   </div>
 
   <div class="col-lg-6">
     <h4><a href="/oneVFFR">1D vFFR Model</a></h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+    <p>The 1D-vFFR model is an electrical analogue model describing the circulation in the human body. It include an idealised virtual 1D human circulation network used to compute flow and pressures.</p>
 
   </div>
 </div>
